spec & ref-client: implement RESET_MASTERDATA_SYNC event
